# soultrain

./: Cargo.toml  README.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: auto_update.rs  lib.rs  main.rs
src/download/: downloadable.rs  mod.rs  progress.rs
src/files/: directory.rs  install.rs  mod.rs  utils.rs
src/github/: mod.rs
src/github/api/: endpoints.rs  mod.rs
src/github/releases/: asset.rs  mod.rs  release.rs
src/installer/: install.rs  link.rs  mod.rs  policy.rs  version.rs
tests/: e2e.rs
tests/utils/: cmd.rs  mod.rs  sys.rs
