[package]
name = "soultrain"
version = "0.1.4"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"]}
indicatif = "0.15.0"
failure = "0.1.8"
exitfailure = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
structopt = "0.3.19"
dirs = "3.0.1"
semver = "0.11.0"
chrono = "0.4.19"
zip = "0.5.8"
lazy_static = "1.4.0"
regex = "1.4.1"